--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,54 +53,87 @@ body {
     align-items: center;}
   
     /*Contenido tab estadisticas*/
-    .tab-widget {}
+    /* Tab styling (optional) */
 
-.tab-widget__list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+.tl_container {margin: 2rem 0;}
+
+.tl_list {
+  display: flex;
+  padding: 0;
+  margin: 0;
+  align-items: center;
+  justify-content: left;
+  list-style: none;
 }
 
-.tab-widget__item {
-    display: inline;
-    margin-right: 5px;
+.tl_list li {
+  margin: 0;
+  width: 33.3333%;
+  text-align: center;
+  border-radius: 4px 4px 0 0;
 }
 
-.tab-widget__link {    
-    background-color: FireBrick;
-    border-radius: 5px 5px 0 0;
-    color: White;
-    font-weight: bold;
-    line-height: 2.1;
-    padding: .5em 1.5em;
-    text-decoration: none;
+.tl_list a {
+  color: #fff;
+  padding: 1rem 0.5rem;
+  display: block;
+  border: none;
+  text-decoration: none;
+  text-shadow: none;
+}
+.tl_list a:hover,
+.tl_list a:focus {
+  text-shadow: 0 2px 4px #000
 }
 
-.tab-widget__link:focus,
-.tab-widget__link:hover {
-    color: White;
+
+/* White focus ring - so you can see when it's focussed (not required) */
+.tl_section h2:focus {
+  outline: 1px solid currentcolor;
 }
 
-.tab-widget__link--active {
-    background-color: Crimson;
-    color: white;
+
+/* Section styling (optional) */
+
+.tl_section {
+  padding: 1rem 1.5rem;
+  min-height: 8rem;
+  border-radius: 0 0 4px 4px;
+  text-shadow: none;
+}
+.tl_section h2 {
+  margin-top: 1rem;
 }
 
-.tab-widget__tabs {
-    background-color: WhiteSmoke;
-    border: solid Firebrick 1px;    
-    border-radius: 0 5px 5px 5px;
-    padding: 1em;
+
+/* tab & panel colour */
+
+.a,
+.a:hover,
+.a:focus {background-color: rgba(255,85,160,.3);}
+.b,
+.b:hover,
+.b:focus  {background-color: rgba(160,255,85,.3);}
+.c,
+.c:hover,
+.c:focus  {background-color: rgba(85,160,255,.3);}
+.d,
+.d:hover,
+.d:focus  {background-color: rgba(85,160,255,.25);}
+.e,
+.e:hover,
+.e:focus  {background-color: rgba(85,160,255,.5);}
+
+
+/* 
+Section styling (required)
+Removes hidden sections from the keychain. 
+Only used when JavaScript is available.
+*/
+[role="tabpanel"][aria-hidden="true"] {
+  display: none;
 }
 
-.tab-widget__tab-content {    
-    display: none;
-}
-
-.tab-widget__tab-content--active,
-.no-js .tab-widget__tab-content {
-    display: block;
-}
 
 }
    
