--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,84 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -19,6 +87,7 @@ time, mark, audio, video {
   vertical-align: baseline;
   font-family: Inter;
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* Parametro */
@@ -26,91 +95,101 @@ body {
   background-color: whitesmoke;
   height: 100%;
   display: flex;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
-body .appSection {
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.4);
-  width: 100%;
-  max-width: 360px;
-  max-height: 649px;
-  margin: 2vh auto;
-  min-height: 649px;
-  align-items: center;
 }
 
-  /*Contenido tab estadisticas*/
+body .appSection {
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  background-color: #ffffff;
+}
+
+/*Contenido tab estadisticas*/
 
 body .tl_container {
-  margin: 2rem 0;
+  margin: 1rem 0;
+  width: 100vw;
 }
+
 body .tl_list {
   display: flex;
   padding: 0;
-  margin: 0;
+  margin: 0 16px;
   align-items: center;
   justify-content: left;
   list-style: none;
+  border: solid 2px;
+  border-color: #5538EE;
+  border-radius: 50px;
 }
+
 body .tl_list li {
   margin: 0;
   width: 33.3333%;
   text-align: center;
   border-radius: 4px 4px 0 0;
 }
+
 body .tl_list a {
-  color: #fff;
-  padding: 1rem 0.5rem;
+  padding: 10px 24px;
   display: block;
   border: none;
   text-decoration: none;
   text-shadow: none;
+  color: #6200EE;
 }
-body .tl_list a:hover,
-body .tl_list a:focus {
-  text-shadow: 0 2px 4px #000;
-}
+
+
+
 body .tl_section h2:focus {
   outline: 1px solid currentcolor;
 }
+
 body .tl_section {
-  padding: 1rem 1.5rem;
+  padding: 1rem 16px;
   min-height: 8rem;
-  border-radius: 0 0 4px 4px;
   text-shadow: none;
+  border: solid 1px grey;
+  margin: 18px 0;
 }
+
 body .tl_section h2 {
   margin-top: 1rem;
 }
+.highcharts-credits {
+  display:none;
+}
+
 body .a,
 body .a:hover,
-body .a:focus {
-  background-color: rgba(255, 85, 160, 0.3);
+body .a:focus,
+body a:visited {
+  color: #6200EE;
+  border-radius: 40px;
 }
+
 body .b,
 body .b:hover,
 body .b:focus {
-  background-color: rgba(160, 255, 85, 0.3);
+  color: #6200EE;
+  border-radius: 40px;
 }
+
 body .c,
 body .c:hover,
 body .c:focus {
-  background-color: rgba(85, 160, 255, 0.3);
-}
-body .d,
-body .d:hover,
-body .d:focus {
-  background-color: rgba(85, 160, 255, 0.25);
-}
-body .e,
-body .e:hover,
-body .e:focus {
-  background-color: rgba(85, 160, 255, 0.5);
+  color: #6200EE;
+  border-radius: 40px;
 }
 
-  /* tab & panel colour */
-   /* 
+body [aria-selected=true][tabindex="0"] {
+  background-color: #6200EE;
+  font-weight: 600;
+  color: #ffffff;
+}
+
+/* tab & panel colour */
+/* 
   Section styling (required)
   Removes hidden sections from the keychain. 
   Only used when JavaScript is available.
@@ -126,6 +205,8 @@ body [role=tabpanel][aria-hidden=true] {
   height: 400px;
   margin: 0 auto;
 }
+
+
 
 /*Title*/
 h1 {
@@ -154,12 +235,23 @@ h4 {
 
 /*Estuctura Javi - Home*/
 body .appSection header {
-  color: #FFFFFF;
   background-color: #F3F3F3;
   display: flex;
   justify-content: space-between;
-  padding: 10px 21px 9px;
-  height: 230px;
+  padding: 10px 25px 25px;
+  margin-top: 20px;
+}
+
+.header-estadisticas {
+  display: flex;
+  justify-content: space-between;
+  background-color: #F3F3F3;
+}
+
+.header-estadisticas h3 {
+  font-size: 24px;
+  font-weight: 700;
+  font-family: Inter;
 }
 
 
@@ -237,6 +329,10 @@ body .appSection main {
   display: flex;
   justify-content: space-between;
   padding: 10px 21px 9px;
+  flex-direction: column;
+  align-content: space-between;
+  align-items: center;
+  height: 60vh;
 }
 
 .objetivo-vacio {
@@ -268,7 +364,7 @@ body .appSection main {
 .chat {
   margin-top: 15px;
   text-align: right;
-} 
+}
 
 nav {
   background-color: white;
@@ -277,16 +373,24 @@ nav {
 }
 
 nav ul {
-  display: inline-flex;
   list-style-type: none;
   font-size: 12px;
   color: #6C7072;
+  display: flex;
+  list-style-type: none;
+  font-size: 12px;
+  color: #6C7072;
+  align-content: center;
+  justify-content: space-between;
+  align-items: flex-start;
 }
+
 
 nav ul li {
   text-align: center;
   margin: 10px;
   vertical-align: top;
+  flex-direction: column;
 }
 
 nav ul img {
@@ -295,7 +399,7 @@ nav ul img {
 
 nav ul li a {
   text-decoration: none;
-  color: #6C7072; 
+  color: #6C7072;
 }
 
 button {
@@ -316,9 +420,9 @@ button a {
 }
 
 #Modal1 {
-  width: 100%; 
-  height: 276px; 
-  margin-top: -270px; 
+  width: 100%;
+  height: 276px;
+  margin-top: -270px;
   z-index: 1;
   padding: 15px;
 }
